# android-lame

app/: CMakeLists.txt  build.gradle
app/src/androidTest/java/com/chrnie/lame/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/java/com/chrnie/lame/: MainActivity.java  Mp3Encoder.java
app/src/main/jni/: mp3_encoder.cpp  native-lib.cpp
app/src/main/jni/include/: mp3_encoder.h  native-lib.h
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml
app/src/test/java/com/chrnie/lame/: ExampleUnitTest.kt
build_script/: build-armv7.sh  build_android.sh
gradle/wrapper/: gradle-wrapper.properties
lame-3.100/: Makefile  config.status  libtool
lame-3.100/ACM/: Makefile
lame-3.100/ACM/ADbg/: Makefile
lame-3.100/ACM/ddk/: Makefile
lame-3.100/ACM/tinyxml/: Makefile
lame-3.100/Dll/: Makefile
lame-3.100/doc/: Makefile
lame-3.100/doc/html/: Makefile
lame-3.100/doc/man/: Makefile
lame-3.100/dshow/: Makefile
lame-3.100/frontend/: Makefile
lame-3.100/include/: Makefile
lame-3.100/libmp3lame/: Makefile  libmp3lame.la
lame-3.100/libmp3lame/.deps/: VbrTag.Plo  bitstream.Plo  encoder.Plo  fft.Plo  gain_analysis.Plo  id3tag.Plo  lame.Plo  mpglib_interface.Plo  newmdct.Plo  presets.Plo  psymodel.Plo  quantize.Plo  quantize_pvt.Plo  reservoir.Plo  set_get.Plo  tables.Plo  takehiro.Plo  util.Plo  vbrquantize.Plo  version.Plo
lame-3.100/mac/: Makefile
lame-3.100/macosx/: Makefile
lame-3.100/misc/: Makefile
lame-3.100/mpglib/: Makefile  libmpgdecoder.la
lame-3.100/vc_solution/: Makefile
(+13 files in other folders)
